force-app/main/default/objects/UIConfig__c/UIConfig__c.object-meta.xml
<CustomObject>
    <description>UIConfig defines how specific fields are rendered within the UI on the Project screens.</description>
    <label>UIConfig</label>
    <nameField>
        <displayFormat>UI-{000}</displayFormat>
        <label>UIConfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UIConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>