force-app/main/default/objects/UIConfig__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <label>Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Editable</fullName>
                <color>#FF6600</color>
                <label>Editable</label>
            </value>
            <value>
                <fullName>Hidden</fullName>
                <color>#999999</color>
                <label>Hidden</label>
            </value>
            <value>
                <fullName>Visible</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
                <isActive>false</isActive>
                <label>Edit</label>
            </value>
            <value>
                <fullName>Read</fullName>
                <isActive>false</isActive>
                <label>Read</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>