force-app/main/default/objects/UIConfig__c/fields/UI_Element__c.field-meta.xml
<CustomField>
    <fullName>UI_Element__c</fullName>
    <label>UI Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>