force-app/main/default/objects/UIConfig__c/fields/UIElement__c.field-meta.xml
<CustomField>
    <fullName>UIElement__c</fullName>
    <label>Unique Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>